# Icon

./: .gitignore  Makefile  README.md
.github/workflows/: ci.yml
agent/: Cargo.toml  build.rs
agent/assets/: block_page.html
agent/src/: config.rs  lib.rs  main.rs
agent/src/clipboard/: macos.rs  mod.rs  monitor.rs  windows.rs
agent/src/proxy/: domain_filter.rs  interceptor.rs  mod.rs  request_parser.rs  system_proxy.rs  tls.rs
agent/src/rules/: engine.rs  matcher.rs  mod.rs  models.rs
agent/src/service/: macos.rs  mod.rs  windows.rs
agent/src/storage/: database.rs  migrations.rs  mod.rs
agent/src/sync/: api_client.rs  cert_pinning.rs  heartbeat.rs  mod.rs  queue.rs  rules_sync.rs  websocket.rs
agent/src/update/: updater.rs
agent/src/watchdog/: integrity.rs  main_watchdog.rs  mod.rs  monitor.rs
agent/tests/: integration_tests.rs
backend/: .env.example  .gitignore  composer.json  eslint.config.js  package-lock.json  package.json  phpunit.xml  vite.config.js
backend/app/Events/: AlertCreated.php  EventsIngested.php  MachineStatusChanged.php  RuleDeleted.php  RuleUpdated.php
backend/app/Jobs/: IndexExchangeJob.php  ProcessEventBatch.php  PurgeOldEventsJob.php
backend/app/Listeners/: SendCriticalAlertNotifications.php
backend/app/Models/: AgentDeployment.php  Alert.php  AuditLog.php  Department.php  Event.php  Machine.php  MonitoredDomain.php  Rule.php  Setting.php  Tag.php  User.php
backend/app/Notifications/: AlertNotification.php  CriticalAlertNotification.php
backend/app/Providers/: AppServiceProvider.php
backend/app/Services/: DlpPatternService.php  ElasticsearchService.php
backend/bootstrap/: app.php
backend/config/: cors.php  icon.php
backend/database/: database.sqlite
backend/database/migrations/: 2024_01_01_000001_create_users_table.php  2024_01_01_000002_create_machines_table.php  (+12 more)
backend/docs/: openapi.yaml
backend/routes/: api.php  channels.php  console.php  web.php
backend/tests/: TestCase.php
docker/: .env.example  Dockerfile  docker-compose.yml  entrypoint.sh
docker/elasticsearch/: icon-exchanges-mapping.json
docker/nginx/: default.conf
docs/: api-reference.md  deployment-guide.md  legal-compliance.md
installer/macos/: build.sh  postinstall.sh
installer/windows/: build.ps1  icon.wxs
scripts/: deploy-pilot.sh
(+136 files in other folders)
